# second_brain

./: .gitignore  AGENTS.md  README.md  TESTING_PLAN.md
agents/: agentcore_entry.py  pyproject.toml  requirements.txt
agents/src/: __init__.py  swarm.py
agents/src/briefing/: __init__.py  agent.py  prompts.py
agents/src/calendar/: __init__.py  agent.py  prompts.py
agents/src/ingestion/: __init__.py  agent.py  graph.py  prompts.py
agents/src/query/: __init__.py  agent.py  prompts.py
agents/src/router/: __init__.py  agent.py  prompts.py
agents/src/scheduler/: __init__.py  agent.py  prompts.py
agents/src/shared/: __init__.py  config.py  database.py  milestones.py  models.py  temporal.py
agents/src/shared/tools/: __init__.py  calendar.py  database.py  entities.py  geographic.py  scheduler.py  taxonomy.py  vector_search.py
agents/src/taxonomy/: __init__.py  agent.py  prompts.py
docs/: implementation-plan.md  requirements.md
docs/design/: cdk-infrastructure.md  postgresql-schema.md  strands-agent-architecture.md
infra/: app.py  cdk.json  pyproject.toml  requirements.txt
infra/config/: __init__.py
infra/constructs/: rust_lambda.py
infra/custom_constructs/: __init__.py
infra/stacks/: __init__.py  agents.py  api.py  auth.py  database.py  integrations.py  migrations.py  monitoring.py  network.py  scheduling.py
lambdas/: Cargo.toml
lambdas/alexa-skill/: Cargo.toml
lambdas/alexa-skill/src/: main.rs
lambdas/api-gateway/: Cargo.toml
lambdas/db-migrator/: handler.py
lambdas/discord-webhook/: Cargo.toml
lambdas/discord-webhook/src/: main.rs
lambdas/event-triggers/: Cargo.toml
lambdas/geocoder/: Cargo.toml
lambdas/geocoder/src/: main.rs
lambdas/shared/: Cargo.toml
lambdas/shared/src/: agents.rs  auth.rs  config.rs  db.rs  error.rs  http.rs  lib.rs  models.rs  secrets.rs  tts.rs
migrations/: 001_extensions.sql  002_users_families.sql  003_relationships.sql  004_entities.sql  005_facts.sql  006_tags.sql  007_calendar.sql  008_devices.sql  009_functions.sql  010_entity_relationships.sql  011_user_feedback.sql  012_query_optimization.sql  013_reminders_notifications.sql  014_entity_locations_unique.sql  014_external_identities.sql  015_families_columns.sql
scripts/: register_discord_commands.py
web/: package.json
