[workspace]
resolver = "2"
members = [
    "shared",
    "api-gateway",
    "discord-webhook",
    "alexa-skill",
    "event-triggers",
    "geocoder",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Second Brain Team"]
license = "MIT"

[workspace.dependencies]
# AWS Lambda
lambda_runtime = "0.13"
lambda_http = "0.13"

# AWS SDK
aws-config = "1.5"
aws-sdk-secretsmanager = "1.54"
aws-sdk-bedrockruntime = "1.62"
aws-sdk-bedrockagentruntime = "1.58"
aws-sdk-lambda = "1.58"
aws-sdk-location = "1.53"
aws-sdk-sns = "1.52"
aws-sdk-ses = "1.55"
aws-sdk-polly = "1.52"
aws-sdk-transcribestreaming = "1.52"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto (for Discord signature verification)
ed25519-dalek = "2.1"
hex = "0.4"
