[package]
name = "alexa-skill"
version.workspace = true
edition.workspace = true

[[bin]]
name = "alexa_skill"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-bedrockagentruntime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
