[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "query"
path = "src/bin/query.rs"

[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"

[[bin]]
name = "briefing"
path = "src/bin/briefing.rs"

[[bin]]
name = "calendar"
path = "src/bin/calendar.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
lambda_http.workspace = true
aws-config.workspace = true
aws-sdk-bedrockagentruntime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
uuid.workspace = true
