[package]
name = "discord-webhook"
version.workspace = true
edition.workspace = true

[[bin]]
name = "discord_webhook"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
lambda_http.workspace = true
aws-config.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-bedrockagentruntime.workspace = true
aws-sdk-polly.workspace = true
aws-sdk-transcribestreaming.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
reqwest.workspace = true
