[package]
name = "event-triggers"
version.workspace = true
edition.workspace = true

[[bin]]
name = "briefing_dispatcher"
path = "src/bin/briefing_dispatcher.rs"

[[bin]]
name = "reminder_evaluator"
path = "src/bin/reminder_evaluator.rs"

[[bin]]
name = "calendar_sync"
path = "src/bin/calendar_sync.rs"

[[bin]]
name = "notification_sender"
path = "src/bin/notification_sender.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-bedrockagentruntime.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-ses.workspace = true
aws-sdk-lambda.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
reqwest.workspace = true
uuid.workspace = true
urlencoding = "2.1"
