[package]
name = "geocoder"
version.workspace = true
edition.workspace = true

[[bin]]
name = "geocoder"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-location.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
