[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
lambda_runtime.workspace = true
lambda_http.workspace = true
aws-config.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-sdk-bedrockagentruntime.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-polly.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
jsonwebtoken = "9"
